# veclib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dconfig  install.sh
.cache/clangd/index/: main.cpp.07515DE33A0C1CB1.idx  vector.cpp.6A32850585D8356D.idx  vector.h.2A589BB0C4932C54.idx  vector2d.cpp.5CA02095E7AAB0CF.idx  vector2d.h.5292E04CF680420B.idx
lib_docs/uml/: library.md  log.md  vector.md  vector2d.md
src/: CMakeLists.txt  main.cpp
src/include/: log.h  vect.h  vector.h  vector2d.h  vector2d_m.h
src/lib/: libvector2d.dylib  log.cpp  vector.cpp  vector2d.cpp  vector2d_m.cpp
tests/: CMakeLists.txt  vector_2d_test.cpp
